[package]
name = "my-rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
time = "0.3.52"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "std", "json"] }
uuid = { version = "1.23.4", features = ["serde", "v4", "v7"] }
